# feelmri

./: .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  install_dependencies.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_motion_LV.py  test_motion_aorta.py
.github/: .coveragerc
.github/workflows/: ci.yml
FEelMRI/: Bloch.py  Filters.py  FiniteElements.py  Generator.py  Helpers.py  IO.py  Image.py  KSpace.py  KSpaceTraj.py  KSpaceTraj.py.bak  MPIUtilities.py  MRImaging.py  MRObjects.py  Motion.py  Noise.py  Parameters.py  Phantom.py  Plotter.py  Recon.py  Spins.py  pyFlowToImage.py  pyMRIEncoding.py  pySpinBasedUtils.py
FEelMRI/src/: BlochSimulator.cpp  FiniteElements.cpp  MRIEncoding.cpp  MRIEncoding.h  PhaseContrast.cpp  PhaseContrast.h  Signal.cpp  Signal.h  Tagging.cpp  Tagging.h
Parameters/: PARAMETERS_LV.yaml  PARAMETERS_aorta.yaml  aorta_slice.yaml  aorta_volume.yaml
Planning/: LV_planning.pvsm  MRI_planning.pvsm  MRI_slice_planning.pvsm  WF_planning.pvsm
cpp/: Assemble.h  BlochSimulator.h  POD.cpp  POD.h
cpp/feelmri/: Assemble.cpp  Assemble.h  BlochSimulator.cpp  MRI.h  POD.h
docker/: Dockerfile  Dockerfile_cpu  Dockerfile_gpu
examples/: 4dflow.py  4dflow_cupy.py  distance_map.py  free_running.py  generate_4dflow.py  generate_4dflow_radial.py  generate_cupy_4dflow.py  generate_spamm.py  generate_water_and_fat.py  gradient_orientation.py  phase_contrast.py  phase_contrast_test.py  pod.py  pvsm_parameters.py  radial_trajectory.py  respiratory_motion.py  respiratory_motion_2.py  spamm.py  spamm_2.py  spamm_fat.py  spamm_semianalytical.py  trajectories.py  visualize_image.py  visualize_image_radial.py  visualize_image_v2.py  visualize_wf.py  water_and_fat.py  water_and_fat_abdomen.py  water_fat.py
examples/meshes/: convert_to_gmsh.py  generate_xdmf.py  water_and_fat.geo
examples/parameters/: 4dflow.yaml  free_running.yaml  gradient_direction.yaml  phase_contrast.yaml  respiratory_motion.yaml  spamm.yaml  spamm_fat.yaml  trajectories.yaml  water_and_fat.yaml  water_and_fat_abdomen.yaml
examples/phantoms/: README.md  beating_heart.xdmf  beating_heart_P2.xdmf  convert_to_hex.geo
examples/planning/: 4dflow.pvsm  README.md  abdomen.pvsm  beating_heart.pvsm  phase_contrast.pvsm  water_and_fat.pvsm
examples/results/4dflow/: exp3_plot_times.py  exp3_times.eps  exp3_times_FFE.txt
examples/results/free-running/: exp1_plot_times.py  exp1_times.eps  exp1_times.txt  exp1_times_EPI_P1_full_elements.txt  exp1_times_EPI_P1_lumped_elements.txt  exp1_times_EPI_P2_full_elements.txt  exp1_times_EPI_P2_lumped_elements.txt  exp1_times_FFE_P1_full_elements.txt  exp1_times_FFE_P1_lumped_elements.txt  exp1_times_FFE_P2_elements.txt  exp1_times_FFE_P2_full_elements.txt  exp1_times_P1_elements.eps  exp1_times_P2_elements.eps
examples/results/o-cspamm/: exp2_plot_times.py  exp2_times.txt  exp2_times_EPI_P2_Precomputed.txt  exp2_times_EPI_P2_Runtime.txt  exp2_times_EPI_P2_elements.eps  exp2_times_full_bloch.txt
feelmri/: Bloch.py  Filters.py  FiniteElements.py  Generator.py  Helpers.py  IO.py  Image.py  KSpace.py  KSpaceTraj.py  MPIUtilities.py  MRImaging.py  MRObjects.py  Math.py  Motion.py  Parameters.py  Phantom.py  Plotter.py  Recon.py  Spins.py  Units.py  pyMRIEncoding.py  pySpinBasedUtils.py
feelmri/cpp/: BlochSimulator.cpp  MRI.cpp  MRI.h  Math.cpp  MeshRefinement.cpp  POD.cpp  PhaseContrast.cpp  Signal.cpp  Signal.h  Tagging.cpp
feelmri/src/: BlochSimulator.h  FEAssemble.cpp  MRIEncoding.h  PhaseContrast.cpp  PhaseContrast.h  Tagging.cpp  Tagging.h
meshes/: generate_xdmf.py  water_and_fat.geo
meshes/xdmf/: water_and_fat.xdmf
parameters/: 4dflow.yaml  PARAMETERS_wf.yaml  aorta_slice.yaml  aorta_slice_radial.yaml  aorta_volume.yaml  gradient_direction.yaml  phase_contrast.yaml  respiratory_motion.yaml  respiratory_motion_2.yaml  spamm.yaml  water_and_fat.yaml
phantoms/: LV_displacement.xdmf  aorta_CFD.xdmf  beating_heart.xdmf  water_and_fat.xdmf
planning/: 4dflow.pvsm  LV_planning.pvsm  MRI_slice_planning.pvsm  beating_heart.pvsm  beating_heart_2.pvsm  phase_contrast.pvsm  water_and_fat.pvsm
python/feelmri/: Filters.py  IO.py  KSpaceTraj.py  MPIUtilities.py  Math.py  Motion.py  Noise.py  Phantom.py  Recon.py  __init__.py
tests/: conftest.py  test_examples_run.py  test_imports.py  test_parallel.py
