[build-system]
requires = ["scikit-build-core>=0.10",
            "pybind11[global]>=3.0",
            "numpy>=2.2",
            "setuptools>=61.0"]
build-backend = "scikit_build_core.build"

[project]
name = "feelmri"
version = "1.0.0"
description = "Finite element MRI library"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Hernan Mella", email = "hernan.mella@pucv.cl" }]
dependencies = [
  "numpy>=2.2",
  "scipy>=1.15",
  "pybind11>=3.0",
  "pyyaml",
  "mpi4py",
  "h5py",
  "meshio",
  "matplotlib",
  "scikit-image",
  "pint",
  "pymetis",
  "fenics-basix",
  "pynufft",
]

[tool.scikit-build]
wheel.packages = ["python/feelmri"]
cmake.verbose = true
cmake.minimum-version = "3.18"