[build-system]
requires = ["scikit-build-core>=0.10",
            "pybind11",
            "numpy",
            "setuptools",
            "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "feelmri"
version = "1.0.0"
description = "Finite element MRI library"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Hernan Mella", email = "hernan.mella@pucv.cl" }]
dependencies = [
  "numpy>=2.2",
  "scipy>=1.15",
  "pybind11>=3.0",
  "pyyaml",
  "mpi4py",
  "h5py",
  "meshio",
  "matplotlib",
  "scikit-image",
  "pint",
  "pymetis",
  "fenics-basix",
  "pynufft",
]
keywords = ["MRI", "finite-element", "simulation", "pybind11", "C++"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
Homepage = "https://github.com/hmella/feelmri"

[tool.scikit-build]
wheel.packages = ["python/feelmri"]
cmake.minimum-version = "3.18"
cmake.verbose = true
build-dir = "build"
ninja.make-fallback = true
sdist.include = [
    "CMakeLists.txt",
    "cpp/",
    "python/",
    "README.md",
    "LICENSE"
]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"
SKBUILD = "ON"